# test

./: .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
test/: __main__.py  conftest.py  logging.py  settings.py
test/db/: base.py  utils.py
test/db/dao/: dummy_dao.py
test/db/models/: __init__.py  dummy_model.py
test/services/: __init__.py
test/services/kafka/: lifetime.py
test/tests/: __init__.py  test_dummy.py  test_kafka.py
test/web/: __init__.py  application.py  lifetime.py
test/web/api/: __init__.py  router.py
test/web/api/dummy/: __init__.py  views.py
test/web/api/echo/: __init__.py  views.py
test/web/api/kafka/: __init__.py  views.py
test/web/api/monitoring/: __init__.py
